Version 2.5.33dev:

* Login / logout entries in main menu did not update correctly.
* Redesigned model selection GUI (more room for additional models / presets).
* Do not write empty FS-UAE config values (less noise in the logs).
* Do not write known launcher-only settings to temp FS-UAE config file.
* Do not use a temporary kickstart dir, so FS-UAE will find accelerator ROMs.
* hard_drive_x_label and hard_drive_x_priority did not show in custom config.

Version 2.5.32dev:

* Added settings GUI control to select full-screen monitor.

Version 2.5.31dev:

* Imported updated translations from crowdin.com.

Version 2.5.30dev:

* Fixed loading with variant UUID on command line.
* Added a basic WHDLoad settings page (tweak splash delay,
  show directory for WHDLoad.key file).
* Fixed loading of .fs-uae config files containg % character in values.
* Fixed on-demand download of floppy images from HTTP.
* Remove some inefficiences when selecting database games in config list.
* Fixed look of variant choice control under OS X.

Version 2.5.28dev:

* Fixed Windows console appearing when using portable launchers.
* Automatically maximize when desktop height <= 768.
* Support for multiple game databases.
* Remove window border when running under GNOME 3 with desktop height <= 768.

Version 2.5.25dev:

* Fixed problem locating translation files in some cases.
* Reverted to preferring QT4 for now.
* Added several joystick configs [johanpalmqvist].

Version 2.5.24dev:

* New user interface layout (config list on the left).
* Improved support for lower-resolution displays.
* Preliminary support for new config visualization (config_feature=1).
* Prefer QT5 when running the launcher, QT4 when running the arcade interface.
* Fixed bug preventing Windows version from joining the net play lobby.
* Also look for ../bin/fs-uae on Linux/Unix.

Version 2.5.23dev:

* Fixed joystick configurations, added --add-dummy-joystick arg for testing.