@@ -1,5 +1,6 @@
 Version 2.5.33dev:
 
+* Fixed issue with get_real_case usage on case sensitive systems (Linux).
 * Login / logout entries in main menu did not update correctly.
 * Redesigned model selection GUI (more room for additional models / presets).
 * Do not write empty FS-UAE config values (less noise in the logs).
